--- a/main.tex
+++ b/main.tex
@@ -18,11 +18,13 @@
 \newtheorem{lemma}{Lemma}
 \theoremstyle{remark}
 \newtheorem{remark}{Poznámka}
+\newtheorem{corollary}{Dôsledok}
 \theoremstyle{definition}
 \newtheorem{definition}{Definícia}
 
 \usepackage{xcolor} % \color
 \usepackage{graphicx} % obrazky
+\usepackage{subcaption} % \subfigure
 
 \newcommand{\err}{\mathrm{err}}
 \newcommand{\norm}[1]{\left\lVert#1\right\rVert}
