+ PAC ucenie: konecne mnoziny hypotez

--- a/cast1.tex
+++ b/cast1.tex
@@ -1,4 +1,4 @@
-\chapter{Teória strojového učenia I}
+\chapter{Úvod do teórie strojového učenia}
 
 Chceme sa naučiť na základe nejakých vstupných dát $x$ predikovať $y$.
 Môžeme si to predstaviť tak, že príroda vie poskytovať pozorovania,
@@ -775,4 +775,6 @@ s minimálnou chybou na trénovacích dátach.
   $\lambda \cdot \norm{\theta}^2$, tak sa optimálnymi parametrami stane
   $\theta$ riešiace rovnicu
   $$(X^T X + \lambda I) \cdot \theta = X^T y.$$
+  Rozmyslite si taktiež, že takýto explicitný ``vzorec'' nie je možné
+  priamočiaro získať pre $L_1$ regularizáciu.
 \end{exercise}
